# formation-IA

./: .gitignore  README.md  exemple-simple.tsx
Privé et partagé/: Nouvelle forme de formations.md
Privé et partagé 2/: Détails-programme.md
semaine 1/: Architecture-LLM.md  CBS.md  Demystifier-le-Transformer.md  J1 - MAPF-CBS.md  J1-MO-MAPF.md  S1-J4-prompt-avance.md  S1_J2_LanguageModel_Types.ipynb  S1_J3_Prompt_Engineering_Basics.ipynb  Transformers.md  build_S1_J4_notebook.ipynb  jour3-4-prompting.md  jour3-prompting.md
semaine 2/: S2-J1-Agent_Personnel_OpenAI.ipynb  S2-J1-agent_juridique_cif.ipynb  S2_Agent_OpenAI_LangChain.ipynb  S2_Agent_OpenAI_Python.ipynb  S2_Agent_OpenAI_python.ipynb  S2_J1-agent_juridique_cif.ipynb  S2_J1_Agent_vs_LLM.ipynb  S2_J1_ai-agent-juridique-boucle.py  S2_J2_Function_Calling.ipynb  S2_J4_Conversation_State.ipynb  S2_J4_Conversation_State_V2.ipynb  S2_J4_Conversation_State_V3.ipynb  S2_J5_Tool_Search_Integration.ipynb  S2_J6_Bonus_LLM_Guardrails.ipynb  S2_J6_Tests_Defenses.ipynb  Squelette_Agent_IA_Generique.ipynb  s2-j6-defenses.md
semaine 4/: MultiAgent_Autogen_Project.ipynb  S4_J2_LangChain_Agents_Tools.ipynb  S4_MultiAgent_MCP_LangChain.ipynb  S4_MultiAgent_MCP_Python.ipynb
semaine 4/mini_framework/ai-agent-lab/: pyproject.toml
semaine 4/mini_framework/ai-agent-lab/mini_framewok/: __init__.py  agent.py  config.py  exceptions.py
semaine3/: S3_J1_J2_MultiAgent_MCP.ipynb  S3_J1_LangChain_Intro.ipynb  S3_J2_LangChain_Agents_Tools.ipynb  S3_J3_MCP_Server (1).ipynb  S3_J3_MCP_Server .ipynb  S3_J3_MCP_Server.ipynb  (+5 more)
(+36 files in other folders)
