# pyproject.toml
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-framework"
version = "1.0.0"
description = "Un micro-framework d'orchestration d'agents IA hautement performant, asynchrone et modulaire."
readme = "README.md"
authors = [
    { name = "Formateur Expert IA", email = "expert-ia@ai-agent-lab.com" }
]
classifiers =
requires-python = ">=3.10"
dependencies = [
    "openai>=1.12.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "pylint>=2.15.0"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=mini_framework"
testpaths = [
    "tests"
]